@@ -51,6 +51,10 @@ Changes log
         logic isn't consistent with similar methods in Filter/Router.        
         Reported by Tim Peierls.
       - Fix JaxRs extension when handling Web forms.
+      - Clarified exception thrown when the converter service is unable
+        to convert a representation to a given target class. Also, if 
+        the conversion fails, a null object is returned and can be passed
+        to an annotated Java method for example.
     - New features
       - Added a CookieAuthenticator class in the org.restlet.ext.crypto
         extension to provide customizable and secure authentication via
@@ -99,8 +103,6 @@ Changes log
       - Generation of GWT client proxy now stops when it detects usage of 
         annotations that don't come from the Restlet edition of GWT.
         Suggested by Cyril Lakech.
-      - Clarified exception thrown when the converter service is unable
-        to convert a representation to a given target class.
       
 - 2.1 Milestone 5 (06/21/2011)
     - API changes
